--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "express": "^4.16.3",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^22.4.3",
+    "prop-types": "^15.6.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
+    "react-router": "^4.2.0",
     "redux": "^3.7.2"
   },
   "devDependencies": {
