--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
+    "history": "^4.7.2",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^22.4.3",
     "prop-types": "^15.6.1",
@@ -19,6 +20,7 @@
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.7.2"
   },
   "devDependencies": {
