--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
-    "presets": [
-        "env",
-        "react"
-    ]
+    "presets":[
+        "react",
+        "env"
+      ],
+      "plugins": ["transform-object-rest-spread"]
 }
