--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-regenerator-runtime": "^6.5.0",
     "babel-register": "^6.26.0",
     "css-loader": "^0.28.11",
+    "cypress": "^2.1.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.4",
