--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "webpack-dev-server --env.NODE_ENV=local --env.development",
     "build": "webpack --env.NODE_ENV=local --env.production --progress",
+    "cypress": "cypress run",
+    "test:cypress": "start-server-and-test dev http://localhost:8080 cypress",
     "test": "jest"
   },
   "author": "Wennod",
@@ -48,6 +50,7 @@
     "react-test-renderer": "^16.3.2",
     "regenerator-runtime": "^0.11.1",
     "sass-loader": "^7.0.1",
+    "start-server-and-test": "^1.4.1",
     "style-loader": "^0.21.0",
     "webpack": "^4.8.1",
     "webpack-cli": "^2.0.14",
